[package]
name = "parser"
version = "0.1.0"
authors = ["Lionel Sambuc <lionel.sambuc@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[lib]
name = "parser"
path = "src/lib.rs"

[[bin]]
name = "parser-driver"
path = "src/main.rs"

[dependencies]
lalrpop-util = "0.17.0"
regex = "0.2.1"
measure_time = "0.6" # To mesure parsing time, only required by binary
lazy_static = "1.3.0" # for space.rs, might be removed once the full data model is provided by the use of the crate

# Logging macros API
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
pretty_env_logger = "0.3"       # Logger implementation

[build-dependencies]
lalrpop = "0.17.0"

