[package]
name = "mercator_parser"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Query Parser for Mercator's own DSL."
#homepage = "https://crates.io/crates/mercator_parser"
repository = "https://github.com/epfl-dias/mercator_parser"
readme = "README.md"

keywords = []
categories = ["database-implementations", "parser-implementations"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

build = "build.rs" # LALRPOP preprocessing

[lib]
name = "parser"
path = "src/lib.rs"

[[bin]]
name = "parser-driver"
path = "src/main.rs"

[dependencies]
mercator_db = "^0.1"

lalrpop-util = "^0.17"
regex = "^1.2"

measure_time = "^0.6" # To mesure parsing time, only required by binary

# Logging macros API
log = { version = "^0.4", features = ["max_level_trace", "release_max_level_info"] }
#log = { version = "^0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "^0.3"       # Logger implementation

[build-dependencies]
lalrpop = "^0.17.1"

