[package]
name = "mercator_parser"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Query Parser for Mercator's own DSL."
#homepage = "https://crates.io/crates/mercator_parser"
repository = "https://github.com/epfl-dias/mercator_parser"
readme = "README.md"

keywords = []
categories = ["database-implementations", "parser-implementations"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

build = "build.rs" # LALRPOP preprocessing

[lib]
name = "mercator_parser"
path = "src/lib.rs"

[[bin]]
name = "parser-driver"
path = "src/main.rs"
required-features = ["bin"]

[profile.release]
lto = true

[features]
bin = ["measure_time", "pretty_env_logger"]

[dependencies]
mercator_db = "0.1"

lalrpop-util = "0.20"
regex = "1.10"

# Logging macros API
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }

# Used for main.rs
pretty_env_logger =  { version = "0.5", optional = true }  # Logger implementation
measure_time = { version = "0.8", optional = true }  # To mesure parsing time, only required by binary

[build-dependencies]
lalrpop = "0.20"

